<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <TextView
        android:id="@+id/selectOption_tv"
        android:layout_width="329dp"
        android:layout_height="104dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="16dp"
        android:text="@string/greet"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="321dp"
        android:layout_height="272dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectOption_tv">

        <RadioButton
            android:id="@+id/enterNew_rd"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/create_record" />

        <RadioButton
            android:id="@+id/displayPrevious_rd"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/view_records" />

        <RadioButton
            android:id="@+id/logout_rb"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/logout" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="324dp"
        android:layout_height="66dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="105dp"
        android:text="@string/submit"
        android:onClick="onSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>